Closed Bug 1008785 Opened 11 years ago Closed 11 years ago

End frame of video has duration of entire video

Categories

(Core :: Audio/Video, defect)

29 Branch
ARM
Android
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla32
Tracking Status
firefox29 --- wontfix
firefox30 + fixed
firefox31 + fixed
firefox32 --- verified
b2g-v1.4 --- fixed
fennec 30+ ---

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(1 file)

Spun off from bug 1005622, comment 32: (In reply to Aaron Train [:aaronmt] from comment #32) > Samsung Galaxy S5 (Android 4.4.2) > Nightly (05/08) > > Video: https://www.youtube.com/watch?v=EKgIXFNSupA > > Steps to Reproduce > > * Visit http://people.mozilla.org/~atrain/mobile/tests/big-buck-high.mp4 > and play the entirety of the clip > > * Tap the screen after the clip ends, see the video controls appear and > the duration mention 0:34 > > * Wait until the video controls re-appear on the screen (when what > seemingly looks like a proper stop event) and see the duration doubled to > 1:08 > > * Tap the play button again, the clip will play and end at the original > duration 0:34 despite having a timeline of 1:08. The last frame shown is > white and the scrubber stops at 0:34. On tapping Pause, and Play again, the > scrubber jumps to the 1:08 mark
OS: Windows 8.1 → Android
Hardware: x86_64 → ARM
Attached patch PatchSplinter Review
Don't mark the last video frame produced by MediaPluginReader has having duration of $mediaEndTime. It should be $mediaEndTime-$frameStartTime. Regression from Bug 930829.
Attachment #8420730 - Flags: review?(kinetik)
Since this was a regression from Bug 930829 which is in Firefox 27, this probably should be uplifted to Aurora and Beta.
Blocks: 930829
tracking-fennec: --- → ?
Attachment #8420730 - Flags: review?(kinetik) → review+
Landed for 32. https://hg.mozilla.org/integration/mozilla-inbound/rev/81f84748793b We should uplift to Aurora 31 and Beta 30. This isn't worth a chemspil, so not noming for tracking 29.
ni? myself so I don't forget to request uplift...
Flags: needinfo?(cpearce)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Status: RESOLVED → VERIFIED
Comment on attachment 8420730 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 930829 User impact if declined: MP4 videos on android won't end properly, once playback reaches the end they will continue to "play" blank data for the duration of the video again. This means the UI looks weird, and the media reports being twice it's actual duration. Testing completed (on m-c, etc.): Been on m-c for a few days, verified fixed by QA. Risk to taking this patch (and alternatives if risky): low. String or IDL/UUID changes made by this patch: none.
Attachment #8420730 - Flags: approval-mozilla-beta?
Attachment #8420730 - Flags: approval-mozilla-aurora?
Flags: needinfo?(cpearce)
Attachment #8420730 - Flags: approval-mozilla-beta?
Attachment #8420730 - Flags: approval-mozilla-beta+
Attachment #8420730 - Flags: approval-mozilla-aurora?
Attachment #8420730 - Flags: approval-mozilla-aurora+
tracking-fennec: ? → 30+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: