Bug 1008785 - Ensure the last video frame end time is correct on Android MP4 playback. r=kinetik, a=lsblakk